--- a/YGODatabase/YGODatabase.csproj
+++ b/YGODatabase/YGODatabase.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="fastJSON" Version="2.4.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
